# Paper-Code

./: README.md
AAAI/2025/: README.md
AAAI2025/: README.md
AAAI2025/01_Dense_Audio-Visual_Event_Localization/: README_CN.md
AAAI2025/02_UrBench_Multi-View_Urban_Scenarios/: code  dataset.py  trainer.py
AAAI2025/03_MQSPN_Multi-Grained_Query-Guided_Set_Prediction/: README_CN.md
AAAI2025/04_FSTA-SNN_Frequency-based_Spatial-Temporal_Attention/: README_CN.md
AAAI2025/05_BASRec_Balanced_Relevance_and_Diversity/: README_CN.md  code  model.py  trainer.py
ACL/2025/: README.md
ACL2025/: README.md
ACL2025/MAC/: DATASET.md  (+3 more)
ACL2025/Multimodal_Fallacy_Classification_Political_Debates/: README.md  pyproject.toml  run_evaluate.py
ACL2025/Multimodal_Fallacy_Classification_Political_Debates/config/audio_only/afc/: hubert_base_finetuned_paper_results.yaml
ACL2025/Multimodal_Fallacy_Classification_Political_Debates/config/text_only/afc/: context_pool_roberta_ctx_1_paper_result.yaml  context_pool_roberta_ctx_5_paper_result.yaml
ACL2025/Multimodal_Fallacy_Classification_Political_Debates/mm_argfallacy/: datamodule.py  lightning_module.py  processing.py
ACL2025/Multimodal_Fallacy_Classification_Political_Debates/mm_argfallacy/models/: text_models.py
ACL2025/Multimodal_Fallacy_Classification_Political_Debates/mm_argfallacy/utils/: audio.py  encoding.py
ACL2025/Multimodal_Fallacy_Classification_Political_Debates/scripts/: run_predict_ensemble.py
CVPR2025/: README.md
ICLR2025/: README.md
ICML2025/: README.md
IJCAI2025/: README.md
NeurIPS2025/: README.md
(+10056 files in other folders)
